[gd_scene load_steps=24 format=3 uid="uid://c3xcgc53ytkha"]

[ext_resource type="Script" path="res://[03] Scripts/Menues/MainMenu.gd" id="1_ujvne"]
[ext_resource type="Script" path="res://[03] Scripts/Env/DirectionalLight3D.gd" id="2_5enua"]
[ext_resource type="Script" path="res://[03] Scripts/Env/WorldEnvironment.gd" id="3_h88t7"]
[ext_resource type="PackedScene" uid="uid://rlldm4r6aig6" path="res://[02] Scenes/Menues/InterfaceSounds.tscn" id="4_phsnb"]
[ext_resource type="Texture2D" uid="uid://c274sju8dmjh4" path="res://[01] Assets/Textures/Blueprint.png" id="5_ax0qk"]
[ext_resource type="Theme" uid="uid://evfm3chkwanu" path="res://Theme.tres" id="6_r56sq"]
[ext_resource type="FontFile" uid="uid://ciwtdqes4lda3" path="res://Rubik-Bold.ttf" id="7_dsvmo"]
[ext_resource type="Texture2D" uid="uid://50ja1ya83wsn" path="res://[01] Assets/Textures/gIK02BgCCBI-HD (1).jpg" id="8_c8gkx"]
[ext_resource type="Texture2D" uid="uid://bh4coa8argp6b" path="res://[01] Assets/Textures/DiscordPng.png" id="9_yq0ad"]
[ext_resource type="Texture2D" uid="uid://cbtuivgs7o8v6" path="res://[01] Assets/Textures/YoutubePng.png" id="10_7xsa5"]
[ext_resource type="Texture2D" uid="uid://dgoaiiluyfpqn" path="res://[01] Assets/Textures/KofiPng.png" id="11_lvude"]
[ext_resource type="PackedScene" uid="uid://llrn6wnd273o" path="res://[02] Scenes/Menues/Options.tscn" id="12_5jy6w"]
[ext_resource type="PackedScene" uid="uid://cxnwtrtjc2mbr" path="res://[02] Scenes/Menues/Fps.tscn" id="12_o12ir"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5jy51"]
sky_top_color = Color(0, 0.494118, 0.815686, 1)
sky_horizon_color = Color(0.686275, 0.847059, 1, 1)
ground_bottom_color = Color(0, 0.494118, 0.815686, 1)
ground_horizon_color = Color(0.686275, 0.847059, 1, 1)

[sub_resource type="Sky" id="Sky_xd86n"]
sky_material = SubResource("ProceduralSkyMaterial_5jy51")

[sub_resource type="Environment" id="Environment_tkeyh"]
background_mode = 2
sky = SubResource("Sky_xd86n")
ssao_light_affect = 1.0
volumetric_fog_density = 0.03
volumetric_fog_emission = Color(1, 1, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_o5cwm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_77jju"]
albedo_color = Color(0.254902, 0.207843, 0.262745, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e1hls"]
albedo_color = Color(0.254902, 0.207843, 0.262745, 1)

[sub_resource type="Animation" id="Animation_cblo5"]
resource_name = "CameraMove"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/SubViewportContainer/SubViewport/Camera3D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 10, 20),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-1.11259, 2.63868, 7.81119), Vector3(-0.823, 2.879, 5.396), Vector3(-1.11259, 2.63868, 7.81119)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/SubViewportContainer/SubViewport/Camera3D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 10, 20),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.208282, 1.73474, 0), Vector3(-0.329867, 2.23228, 0), Vector3(-0.208282, 1.73474, 0)]
}

[sub_resource type="Animation" id="Animation_51nvt"]
resource_name = "OptionsFade"
length = 0.2

[sub_resource type="Animation" id="Animation_o4aej"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/SubViewportContainer/SubViewport/Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.823, 2.879, 5.396)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background/SubViewportContainer/SubViewport/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.329867, 2.23228, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ee7x"]
_data = {
"CameraMove": SubResource("Animation_cblo5"),
"OptionsFade": SubResource("Animation_51nvt"),
"RESET": SubResource("Animation_o4aej")
}

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_ujvne")

[node name="GlobalEnvironment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="GlobalEnvironment"]
transform = Transform3D(0.567593, -0.818022, -0.0931586, 0.21382, 0.255731, -0.942806, 0.795059, 0.515211, 0.32006, 0, 0, 0)
script = ExtResource("2_5enua")

[node name="WorldEnvironment" type="WorldEnvironment" parent="GlobalEnvironment"]
environment = SubResource("Environment_tkeyh")
script = ExtResource("3_h88t7")

[node name="Background" type="Node3D" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="Background/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Background/SubViewportContainer/SubViewport"]
transform = Transform3D(-0.614288, -0.255597, 0.746539, 0, 0.946085, 0.323917, -0.789082, 0.198978, -0.581169, -0.823, 2.879, 5.396)

[node name="Assets" type="Node3D" parent="Background"]

[node name="OmniLight3D" type="OmniLight3D" parent="Background/Assets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.60275, 2, 8.06028)
light_color = Color(0, 0.588235, 0.411765, 1)
omni_range = 50.548

[node name="MeshInstance3D" type="MeshInstance3D" parent="Background/Assets"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 7)
mesh = SubResource("CapsuleMesh_o5cwm")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="Background"]

[node name="CSGBox3D5" type="CSGBox3D" parent="Background/CSGCombiner3D"]
transform = Transform3D(1.91069e-15, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -1, 0, -4.37114e-08, -2, 3, 7)
material_override = SubResource("StandardMaterial3D_77jju")
size = Vector3(7, 6, 6)

[node name="CSGBox3D6" type="CSGBox3D" parent="Background/CSGCombiner3D"]
transform = Transform3D(1.91069e-15, -1, -4.37114e-08, -4.37114e-08, -4.37114e-08, 1, -1, 0, -4.37114e-08, -1, 3.5, 6.02782)
material_override = SubResource("StandardMaterial3D_e1hls")
operation = 2
size = Vector3(6, 5, 5)

[node name="Ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UiSounds" parent="Ui" instance=ExtResource("4_phsnb")]
root_path = NodePath("..")

[node name="SAVE_LOAD" type="Control" parent="Ui"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label3" type="Label" parent="Ui/SAVE_LOAD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -252.0
offset_right = 160.0
offset_bottom = -191.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 51
text = "SAVE / LOAD"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Ui/SAVE_LOAD"]
layout_mode = 0
offset_left = -388.5
offset_top = -127.0
offset_right = -196.5
offset_bottom = 129.0

[node name="Label" type="Label" parent="Ui/SAVE_LOAD/Button"]
layout_mode = 0
offset_left = 72.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 27.0
text = "Name"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Ui/SAVE_LOAD/Button"]
layout_mode = 0
offset_left = 56.0
offset_top = 24.0
offset_right = 136.0
offset_bottom = 48.0
text = "Location"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Ui/SAVE_LOAD/Button"]
layout_mode = 0
offset_left = 64.0
offset_top = 216.0
offset_right = 129.0
offset_bottom = 253.0
theme_override_font_sizes/font_size = 30
text = "55%"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Ui/SAVE_LOAD/Button"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 17.0
offset_bottom = 27.0
text = "1"
horizontal_alignment = 1

[node name="Blueprint" type="Sprite2D" parent="Ui/SAVE_LOAD/Button"]
position = Vector2(98, 135.5)
scale = Vector2(0.558594, 0.558594)
texture = ExtResource("5_ax0qk")

[node name="Button2" type="Button" parent="Ui/SAVE_LOAD"]
layout_mode = 0
offset_left = -100.5
offset_top = -127.0
offset_right = 91.5
offset_bottom = 129.0

[node name="Label5" type="Label" parent="Ui/SAVE_LOAD/Button2"]
layout_mode = 0
offset_left = 56.0
offset_top = 120.0
offset_right = 141.0
offset_bottom = 139.0
text = "NEW GAME"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="Ui/SAVE_LOAD/Button2"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 19.0
offset_bottom = 27.0
text = "2"
horizontal_alignment = 1

[node name="Button3" type="Button" parent="Ui/SAVE_LOAD"]
layout_mode = 0
offset_left = 187.5
offset_top = -127.0
offset_right = 379.5
offset_bottom = 129.0

[node name="Label6" type="Label" parent="Ui/SAVE_LOAD/Button3"]
layout_mode = 0
offset_left = 56.0
offset_top = 120.0
offset_right = 141.0
offset_bottom = 139.0
text = "NEW GAME"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="Ui/SAVE_LOAD/Button3"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 19.0
offset_bottom = 27.0
text = "3"
horizontal_alignment = 1

[node name="Button4" type="Button" parent="Ui/SAVE_LOAD"]
layout_mode = 0
offset_left = -52.5
offset_top = 169.0
offset_right = 46.5
offset_bottom = 190.0
text = "[ESC] BACK"

[node name="MainMenu" type="Control" parent="Ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameTitle" type="Label" parent="Ui/MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -520.0
offset_top = -284.0
offset_right = -308.0
offset_bottom = -236.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Game Title"

[node name="Version" type="Label" parent="Ui/MainMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 504.0
offset_top = -308.0
offset_right = 565.0
offset_bottom = -279.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
text = "V0.00
2023-12-22"

[node name="MenuBtn" type="MarginContainer" parent="Ui/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -36.0
offset_right = -364.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/MainMenu/MenuBtn"]
layout_mode = 2

[node name="PlayBtn" type="Button" parent="Ui/MainMenu/MenuBtn/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitBtn")
theme = ExtResource("6_r56sq")
theme_type_variation = &"MainMenu"
theme_override_fonts/font = ExtResource("7_dsvmo")
theme_override_font_sizes/font_size = 35
text = "PLAY"
alignment = 0

[node name="OptionsBtn" type="Button" parent="Ui/MainMenu/MenuBtn/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 35
text = "OPTIONS"
alignment = 0

[node name="QuitBtn" type="Button" parent="Ui/MainMenu/MenuBtn/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../PlayBtn")
theme_override_font_sizes/font_size = 35
text = "QUIT"
alignment = 0

[node name="TextureBtn" type="Control" parent="Ui/MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="YoutubeVideoBtn" type="TextureButton" parent="Ui/MainMenu/TextureBtn"]
layout_mode = 0
offset_left = 288.0
offset_top = 150.0
offset_right = 539.0
offset_bottom = 291.0
texture_normal = ExtResource("8_c8gkx")
ignore_texture_size = true
stretch_mode = 0

[node name="DiscordBtn" type="TextureButton" parent="Ui/MainMenu/TextureBtn"]
layout_mode = 0
offset_left = 395.0
offset_top = 100.0
offset_right = 443.0
offset_bottom = 148.0
texture_normal = ExtResource("9_yq0ad")
ignore_texture_size = true
stretch_mode = 0

[node name="YoutubeBtn" type="TextureButton" parent="Ui/MainMenu/TextureBtn"]
layout_mode = 0
offset_left = 443.0
offset_top = 100.0
offset_right = 491.0
offset_bottom = 148.0
texture_normal = ExtResource("10_7xsa5")
ignore_texture_size = true
stretch_mode = 0

[node name="KofiBtn" type="TextureButton" parent="Ui/MainMenu/TextureBtn"]
layout_mode = 0
offset_left = 491.0
offset_top = 100.0
offset_right = 539.0
offset_bottom = 148.0
texture_normal = ExtResource("11_lvude")
ignore_texture_size = true
stretch_mode = 0

[node name="FpsCounter" parent="Ui/MainMenu" instance=ExtResource("12_o12ir")]
layout_mode = 1
offset_left = -576.0
offset_top = -324.0
offset_right = -576.0
offset_bottom = -324.0

[node name="OPTIONS" parent="Ui" instance=ExtResource("12_5jy6w")]
visible = false
layout_mode = 1

[node name="BackBtn" type="Button" parent="Ui/OPTIONS"]
layout_mode = 0
offset_left = 911.0
offset_top = 557.0
offset_right = 967.0
offset_bottom = 584.0
theme_override_font_sizes/font_size = 10
text = "[ESC] BACK"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ee7x")
}

[connection signal="pressed" from="Ui/SAVE_LOAD/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Ui/MainMenu/MenuBtn/VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="Ui/MainMenu/MenuBtn/VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="Ui/MainMenu/MenuBtn/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Ui/MainMenu/TextureBtn/YoutubeVideoBtn" to="." method="_on_youtube_video_btn_pressed"]
[connection signal="pressed" from="Ui/MainMenu/TextureBtn/DiscordBtn" to="." method="_on_discord_btn_pressed"]
[connection signal="pressed" from="Ui/MainMenu/TextureBtn/YoutubeBtn" to="." method="_on_youtube_btn_pressed"]
[connection signal="pressed" from="Ui/MainMenu/TextureBtn/KofiBtn" to="." method="_on_kofi_btn_pressed"]
[connection signal="pressed" from="Ui/OPTIONS/BackBtn" to="." method="_on_back_btn_pressed"]
